# whitson-pvt-sdk

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  justfile  prek.toml  pyproject.toml
.github/workflows/: publish.yml
examples/: README.md  basic_connect.py  basic_crud.py  basic_reports.py  cli_list.py  fastapi_demo.py  flash_calculation.py  multi_domain_copy.py  multi_flash_calculation.py  pagination.py  report_import.py  saturation_pressure_calculation.py  separator_process_calculation.py  single_flash_calculation.py
scripts/: check_version.py  generate_sdk.py  release_notes.py
scripts/sdk_generator/: __init__.py  config.py  generate.py  models.py  naming.py  openapi.py  render.py
src/pvt_sdk/: __init__.py  auth.py  errors.py  http.py
src/pvt_sdk/_models/: __init__.py  _generated.py
src/pvt_sdk/models/: __init__.py
src/pvt_sdk/v1/: black_oil_tables.py  factory.py  fluid_models.py  projects.py  regions.py  reports.py  resources.py  samples.py  wells.py
src/whitson_pvt_sdk/: auth.py  http.py
src/whitson_pvt_sdk/models/: manual.py
src/whitson_pvt_sdk/v1/: black_oil_tables.py  fluid_models.py  projects.py  reports.py  samples.py
tests/: conftest.py  test_auth.py  test_check_version.py  test_client.py  test_client_typing.py  test_generator.py  test_http.py  test_release_notes.py  test_version.py
tests/integration/: conftest.py  test_v2_calculations.py  test_v2_contract.py
tests/v1/: test_regions.py  test_reports.py  test_samples.py  test_wells.py
tests/v2/: test_calculations.py  test_pagination.py  test_regions.py  test_reports.py  test_samples.py
whitson_pvt_sdk/: __init__.py  _client.py  _retry.py  auth.py  errors.py  http.py  utils.py
whitson_pvt_sdk/_generated/: __init__.py
whitson_pvt_sdk/_generated/shared/: reports.py
whitson_pvt_sdk/_generated/v1/: authentication.py  black_oil_tables.py  fluid_models.py  models.py  projects.py  regions.py  reports.py  resources.py  samples.py  wells.py
whitson_pvt_sdk/_generated/v2/: authentication.py  black_oil_tables.py  calculations.py  fluid_models.py  models.py  projects.py  regions.py  reports.py  resources.py  samples.py  wells.py
whitson_pvt_sdk/models/: __init__.py  _generated.py  manual.py
whitson_pvt_sdk/models/v1/: __init__.py  _generated.py
whitson_pvt_sdk/models/v2/: __init__.py  _generated.py
whitson_pvt_sdk/shared/: __init__.py  models.py  pagination.py
whitson_pvt_sdk/v1/: __init__.py  black_oil_tables.py  fluid_models.py  projects.py  regions.py  reports.py  resources.py  samples.py  wells.py
whitson_pvt_sdk/v1/models/: __init__.py
whitson_pvt_sdk/v2/: __init__.py  black_oil_tables.py  calculations.py  fluid_models.py  projects.py  regions.py  reports.py  resources.py  samples.py  wells.py
whitson_pvt_sdk/v2/_helpers/: calculations.py
whitson_pvt_sdk/v2/models/: __init__.py
