[project]
name = "whitson-pvt-sdk"
version = "0.1.0"
description = "whitson PVT SDK — HTTP client for the whitson PVT external API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.0", "pydantic>=2.12.0"]

[build-system]
requires = ["uv_build>=0.11.9,<0.12"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = "."

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["whitson_pvt_sdk"]

[tool.datamodel-codegen]
target-python-version = "3.10"
input-file-type = "openapi"
use-union-operator = true
use-standard-collections = true
use-standard-primitive-types = true
use-annotated = true
field-constraints = true
enum-field-as-literal = "all"
base-class = "pydantic.BaseModel"
formatters = ["ruff-check", "ruff-format"]

[dependency-groups]
dev = [
  "ruff>=0.15.12",
  "datamodel-code-generator>=0.28",
  "prek>=0.3.13",
  "ty>=0.0.34",
]
