[project]
name = "whitson-pvt-sdk"
version = "1.0.0"
description = "whitson PVT SDK — HTTP client for the whitson PVT external API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.0", "pydantic>=2.12.0"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]

[build-system]
requires = ["uv_build>=0.11.9,<0.12"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = "."

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["whitson_pvt_sdk"]

[tool.ty.src]
exclude = ["examples/"]

[dependency-groups]
dev = [
  "ruff>=0.15.12",
  "datamodel-code-generator>=0.28",
  "prek>=0.3.13",
  "ty>=0.0.34",
  "pytest>=9.0.3",
  "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
